<resources>
    <string name="app_name">RUCafe</string>
    <string name="RUCafe">RU CAFE</string>
    <string name="orderDonut">Order Donuts</string>
    <string name="orderDonuts">Order Donuts</string>
    <string name="orderCoffee">Order Coffee</string>
    <string name="yourOrder">Your Order</string>
    <string name="storeOrders">Store Orders</string>
    <string name="donutsLabel">Ordering Donuts!</string>
    <string name="coffeeLabel">Ordering Coffee!</string>
    <string name="yourOrderLabel">Your Basket</string>
    <string name="storeOrdersLabel">Store Orders</string>
    <string name="placeOrder">Place Order</string>
    <string name="yourOrders">Your Orders</string>
    <string name="addToOrderCoffee">Add to Order</string>
    <string name="placingOrder">Place Order</string>
    <string name="Oreo">Oreo</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="milk">Milk</string>
    <string name="syrup">Syrup</string>
    <string name="caramel">Caramel</string>
    <string name="cream">Cream</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="orders_total">Total:</string>
    <string name="your_orders_subtotal_label">Sub-Total:</string>
    <string name="your_orders_salestax_label">Sales Tax:</string>
    <string name="deleteItem">To delete an item from order, please select an item.</string>
    <string name="store_orders">Store Orders</string>
    <string name="cancel_store_order">Cancel Order</string>
    <string name="order_num">Order Number</string>
    <string name="cup_size">"Cup Size: "</string>
    <string name="zero">0</string>
    <string name="zero_total">0.00</string>
    <string name="pick_size">Pick a Size</string>
    <string name="one">1</string>
    <string name="deleteItem1">To delete an item from order,</string>
    <string name="deleteItem2" />
    <string name="deleteItem3">please select an item.</string>
    <string name="donut_image">Donut Image</string>
</resources>